[gd_scene load_steps=13 format=3 uid="uid://bw28v3pu7rp28"]

[ext_resource type="PackedScene" uid="uid://cwhfbot0mesiy" path="res://scenes/player.tscn" id="1_fhldm"]
[ext_resource type="Script" uid="uid://bqogf1rn4mwsg" path="res://scripts/CardManager.gd" id="1_rvrkw"]
[ext_resource type="PackedScene" uid="uid://dccda0tjgh6bh" path="res://scenes/test_dummy.tscn" id="2_b6sk2"]
[ext_resource type="Script" uid="uid://sa8galc2f5hd" path="res://scripts/PlayerHand.gd" id="3_0wsiq"]
[ext_resource type="Texture2D" uid="uid://bhf0snh858kk1" path="res://assets/Deck.png" id="4_0wsiq"]
[ext_resource type="Script" uid="uid://dhf40xl8yoleq" path="res://scripts/Deck.gd" id="4_tot2v"]
[ext_resource type="Script" uid="uid://dfdr28w7bdfub" path="res://scripts/InputManager.gd" id="6_axbnv"]
[ext_resource type="Script" uid="uid://duljsncr5xd22" path="res://scripts/Energy.gd" id="7_nj5ok"]
[ext_resource type="Script" uid="uid://u6ufg6bw64ip" path="res://scripts/DiscardPile.gd" id="7_qvgvs"]
[ext_resource type="Script" uid="uid://drrvayi838ypx" path="res://scripts/TurnManager.gd" id="8_b6sk2"]
[ext_resource type="Script" uid="uid://b867abe1g53mj" path="res://scripts/EnemyManager.gd" id="9_7dk1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tot2v"]
size = Vector2(180, 266)

[node name="TestCombatScene" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_fhldm")]
position = Vector2(521, 493)

[node name="test_dummy2" parent="." instance=ExtResource("2_b6sk2")]
position = Vector2(1170, 499)

[node name="test_dummy3" parent="." instance=ExtResource("2_b6sk2")]
position = Vector2(1396, 508)

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_rvrkw")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_0wsiq")

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(150, 890)
script = ExtResource("4_tot2v")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
texture = ExtResource("4_0wsiq")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
shape = SubResource("RectangleShape2D_tot2v")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
offset_left = -9.0
offset_top = -28.0
offset_right = 31.0
offset_bottom = 12.0
scale = Vector2(2, 2)
text = "0"

[node name="Energy" type="Node2D" parent="."]
position = Vector2(138, 694)
script = ExtResource("7_nj5ok")

[node name="EnergyText" type="RichTextLabel" parent="Energy"]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
theme_override_font_sizes/normal_font_size = 50
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardPile" type="Node2D" parent="."]
script = ExtResource("7_qvgvs")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_axbnv")

[node name="TurnManager" type="Node2D" parent="."]
script = ExtResource("8_b6sk2")

[node name="EnemyManager" type="Node2D" parent="."]
script = ExtResource("9_7dk1r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndTurnButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1562.0
offset_top = 850.0
offset_right = 1820.0
offset_bottom = 952.0
theme_override_font_sizes/font_size = 40
text = "End Turn
"

[connection signal="turn_end" from="TurnManager" to="Deck" method="_on_turn_manager_turn_end"]
[connection signal="turn_end" from="TurnManager" to="Energy" method="_on_turn_manager_turn_end"]
[connection signal="turn_end" from="TurnManager" to="EnemyManager" method="_on_turn_manager_turn_end"]
[connection signal="pressed" from="CanvasLayer/Control/EndTurnButton" to="TurnManager" method="_on_end_turn_button_pressed"]
